// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Themed Text match snapshot 1`] = `
<Text
  style={
    [
      {
        "color": "#000",
      },
      undefined,
    ]
  }
>
  Snapshot test!
</Text>
`;

exports[`Themed View match snapshot 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#fff",
      },
      undefined,
    ]
  }
>
  Snapshot test!
</View>
`;
